--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,9 @@
 {
-    "editor.fontSize": 16.5,
+    "editor.fontSize": 15,
     "editor.hover.enabled": true,
     "workbench.startupEditor": "none",
     "explorer.compactFolders": false,
-    "terminal.integrated.fontSize": 16,
+    "terminal.integrated.fontSize": 13,
     "editor.rulers": [80],
     "workbench.colorTheme": "OM Theme (Default Dracula Italic)",
     "workbench.iconTheme": "material-icon-theme",
@@ -12,7 +12,7 @@
     },
     "code-runner.runInTerminal": true,
     "code-runner.ignoreSelection": true,
-    "editor.fontFamily": "'Fira Code', Consolas, 'Dank Mono', 'Source Code Pro', 'Fira Code', Menlo, 'Inconsolata', 'Droid Sans Mono', 'DejaVu Sans Mono', 'Ubuntu Mono', 'Courier New', Courier, Monaco, monospace",
+    "editor.fontFamily": "Fira Code",
     "terminal.integrated.fontFamily": "",
     "editor.fontLigatures": true,
     "[python]": {
@@ -46,7 +46,7 @@
       "reportUnknownLambdaType": "none",
       "reportUnknownParameterType": "none"
     },
-    // "python.defaultInterpreterPath": "./venv/bin/python",
+    // "python.defaultInterpreterPath": "./venv/scripts/python",
     "python.analysis.typeCheckingMode": "basic",
     "cSpell.enabled": true,
     "git.enableSmartCommit": true,
