--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,7 @@
     "explorer.compactFolders": false,
     "terminal.integrated.fontSize": 13,
     "editor.rulers": [80],
-    "workbench.colorTheme": "OM Theme (Default Dracula Italic)",
+    "workbench.colorTheme": "2077",
     "workbench.iconTheme": "material-icon-theme",
     "code-runner.executorMap": {
       "python": "cls ; python -u"
