--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
     "editor.hover.enabled": true,
     "workbench.startupEditor": "none",
     "explorer.compactFolders": false,
-    "terminal.integrated.fontSize": 13,
+    "terminal.integrated.fontSize": 15,
     "editor.rulers": [80],
     "workbench.colorTheme": "2077",
     "workbench.iconTheme": "material-icon-theme",
@@ -16,7 +16,7 @@
     "terminal.integrated.fontFamily": "",
     "editor.fontLigatures": true,
     "[python]": {
-      "editor.defaultFormatter": "ms-python.python",
+      "editor.defaultFormatter": "ms-python.autopep8",
       "editor.tabSize": 4,
       "editor.insertSpaces": true,
       "editor.formatOnSave": true,
